--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,7 +3,7 @@
 
   <aside class="sidebar" id="sidebarNav">
     <a href="/dashboard" class="sidebar-brand">
-      <span class="brand-dot"></span>
+      <img src="/assets/logo.svg" alt="Smart Task Manager logo" class="nav-logo" />
       <span>Smart Task Manager</span>
     </a>
 
