--- a/views/tasks/new.ejs
+++ b/views/tasks/new.ejs
@@ -8,6 +8,14 @@
     <label for="description">Description</label>
     <textarea id="description" name="task[description]"></textarea>
 
+
+    <label for="category">Category</label>
+    <select id="category" name="task[category]">
+      <option value="Personal" selected>Personal</option>
+      <option value="Professional">Professional</option>
+      <option value="Student">Student</option>
+    </select>
+
     <label for="priority">Priority</label>
     <select id="priority" name="task[priority]">
       <option value="Low">Low</option>
