--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Task Manager</title>
+    <link rel="icon" type="image/svg+xml" href="/assets/logo.svg" />
     <script>
       (function applyStoredTheme() {
         try {
